--- a/paper/Methodology.tex
+++ b/paper/Methodology.tex
@@ -8,7 +8,7 @@ To create a formally verified Python 2 to 3 transpiler, the Coq theorem prover w
 First, a \textit{function} -- a specifically defined piece of code that receives an input and returns an output --  was written in Coq that translated Python 2 print statements to their Python 3 equivalents. Then, theorems each describing one part of the specification were entered into Coq. For example, one specification theorem was that for all print statements, fix-print's translated code would still begin with the word "print." After each specification theorem was defined, they were then proven in Coq using various strategies.
 
 \subsubsection{Code Extraction}
-Due to Coq's nature as a theorem prover rather than a dedicated programming language, executing the transpiler in Coq directly was difficult. To remedy this, Coq's code extraction capabilities were used. Coq's code extraction capabilities allow for programs written in Coq to be translated into full-fledged programming languages where they can be executed more easily (https://coq.inria.fr/doc/v8.13/refman/addendum/extraction.html). Proofs of program correctness are not extraction in this process, only the programs themselves. However, if a program written in Coq is formally verified to meet specifications, the resulting extracted code should also meet specifications despite not being written in Coq. fix-print was extracted to the OCaml programming language in order to be run, which is also how the CompCert compiler was able to be run despite also being wirrten in Coq \autocite{Leroy}.
+Due to Coq's nature as a theorem prover rather than a dedicated programming language, executing the transpiler in Coq directly was difficult. To remedy this, Coq's code extraction capabilities were used. Coq's code extraction capabilities allow for programs written in Coq to be translated into full-fledged programming languages where they can be executed more easily \autocite{Filliâtre}. Proofs of program correctness are not extraction in this process, only the programs themselves. However, if a program written in Coq is formally verified to meet specifications, the resulting extracted code should also meet specifications despite not being written in Coq. fix-print was extracted to the OCaml programming language in order to be run, which is also how the CompCert compiler was able to be run despite also being wirrten in Coq \autocite{Leroy}.
 
 \subsection{Evaluation}
 fix-print was evaluated against the 2to3 test suite, which is a collection of tests the developers of 2to3 wrote to test the effectiveness 2to3. Specifically, fix-print was tested against the 16 tests that were written to test the effectiveness of the \verb|print| fixer. For each test, data about fix-print's and 2to3's accuracy and run time performance was collected and stored in CSV files in order to compare the effectiveness of both translators. Accuracy and performance data for each translator is recorded in Appendix \ref{appendix:Data}.
