--- a/paper/Results.tex
+++ b/paper/Results.tex
@@ -1,7 +1,7 @@
 \section{Results}
 
 \subsection{Accuracy}
-\begin{table*}[hbt!]
+\begin{table*}[ht!]
     \centering
     \begin{tabular}{@{}l|lll@{}}
     \toprule
