--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -31,14 +31,25 @@
 }
 
 @article{Burdy,
-  author  = {Burdy, Lilian and Cheon, Yoonsik and Cok, David and Ernst, Michael and Kiniry, Joseph and Leavens, Gary and Rustan, K. and Leino, K Rustan M and Poll, Erik},
-  year    = {2003},
-  month   = {08},
-  pages   = {75-91},
-  title   = {An overview of JML tools and applications1},
-  volume  = {80},
-  journal = {Electronic Notes in Theoretical Computer Science - ENTCS},
-  doi     = {10.1016/S1571-0661(04)80810-7}
+  author   = {Burdy, Lilian and Cheon, Yoonsik and Cok, David R. and Ernst, Michael D. and Kiniry, Joseph R. and Leavens, Gary T. and Leino, Rustan and Poll, Erik},
+  title    = {An Overview of JML Tools and Applications},
+  year     = {2005},
+  month    = {June},
+  abstract = {The Java Modeling Language (JML) can be used to specify the detailed design of Java classes and interfaces by adding annotations to Java source files. The aim of JML is to provide a specification language that is easy to use for Java programmers and that is supported by a wide range of tools for specification type-checking, runtime debugging, static analysis, and verification.
+              
+              This paper gives an overview of the main ideas behind JML, the different groups collaborating to provide tools for JML, and the existing applications of JML. Thus far, most applications have focused on code for programming smartcards written in the Java Card dialect of Java.},
+  url      = {https://www.microsoft.com/en-us/research/publication/overview-jml-tools-applications/},
+  pages    = {212-232},
+  journal  = {International Journal on Software Tools for Technology Transfer},
+  volume   = {7},
+  edition  = {International Journal on Software Tools for Technology Transfer},
+  number   = {3}
+}
+
+@manual{Filliâtre,
+  author = {Filliâtre, Jean-Christophe and Letouzey, Pierre},
+  title  = {Program extraction},
+  url    = {https://coq.inria.fr/doc/v8.13/refman/addendum/extraction.html}
 }
 
 @article{Hoare,
